@@ -7,10 +7,10 @@ public static class UpdateDataStartMoneyPatch {
     public static MethodInfo GetOriginalUpdateData() => AccessTools.Method(typeof(EconomyManager), nameof(EconomyManager.UpdateData));
     public static MethodInfo GetUpdateDataPrefix() => AccessTools.Method(typeof(UpdateDataStartMoneyPatch), nameof(UpdateDataStartMoneyPatch.UpdateDataPrefix));
     public static void UpdateDataPrefix(EconomyManager __instance) {
-        if (!Config.Instance.EnabledInitialCash) return;
+        if (!Config.Instance.EnableStartMoney) return;
         var updateMode = Singleton<SimulationManager>.instance.m_metaData.m_updateMode;
         if (updateMode == SimulationManager.UpdateMode.NewMap || updateMode == SimulationManager.UpdateMode.NewGameFromMap || updateMode == SimulationManager.UpdateMode.NewScenarioFromMap || updateMode == SimulationManager.UpdateMode.UpdateScenarioFromMap || updateMode == SimulationManager.UpdateMode.NewAsset || updateMode == SimulationManager.UpdateMode.NewGameFromScenario) {
-            __instance.StartMoney = Config.Instance.InitialCash * 100;
+            __instance.StartMoney = Config.Instance.StartMoneyAmount * 100;
         }
     }
 }
