@@ -159,6 +159,9 @@
   <data name="CustomUnlockPanelTooltip" xml:space="preserve">
     <value>These options are not available when “Unlock All” feature is enabled because Unlock All has unlocked all of the following options.</value>
   </data>
+  <data name="Economy" xml:space="preserve">
+    <value>Economy</value>
+  </data>
   <data name="EnableAchievements" xml:space="preserve">
     <value>Achievements system is always available</value>
   </data>
@@ -351,6 +354,12 @@
   <data name="RemoveMuseumFire" xml:space="preserve">
     <value>Remove museum fire</value>
   </data>
+  <data name="RemoveNotEnoughMoney" xml:space="preserve">
+    <value>Remove not enough money warning</value>
+  </data>
+  <data name="RemoveNotEnoughMoneyMinor" xml:space="preserve">
+    <value>When “Money Anarchy” or "Unlimited Money" is enabled, this option is enabled automatically enforced.</value>
+  </data>
   <data name="RemoveOfficeBuildingFire" xml:space="preserve">
     <value>Remove office building fire</value>
   </data>
@@ -525,6 +534,9 @@
   </data>
   <data name="UpdateLog_V0_9_9ADD3" xml:space="preserve">
     <value>Added the ability to adjust the cost of relocate building, included in the control panel.</value>
+  </data>
+  <data name="UpdateLog_V0_9_9ADD4" xml:space="preserve">
+    <value>Added Remove not enough money warning function.</value>
   </data>
   <data name="UpdateLog_V0_9_9FIX0" xml:space="preserve">
     <value>Fixed an issue where still catch fire after remove fires.</value>
