@@ -5,6 +5,7 @@ Added building segment refund function, including remove time limitation, multip
 Added the ability to adjust the cost of relocate building, included in the control panel.
 Option panel added a entry button option to invoke the control panel.
 Added Slovak localization.
+Added Remove not enough money warning function.
 Optimized the options panel categories horizontal offset option, which now takes effect after adjustment.
 Optimized the start money setting logic so that the start money is the value you set when you start a new game.
 Fixed an issue where still catch fire after remove fires.
